--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.2/css/fontawesome.min.css"
     integrity="sha384-X8QTME3FCg1DLb58++lPvsjbQoCT9bp3MsUU3grbIny/3ZwUJkRNO8NPW6zqzuW9" crossorigin="anonymous">
+    <link rel="stylesheet" href="colorjoe/colorjoe.css">
+    <script src="colorjoe/colorjoe.min.js"></script>
+    <style>
+        body {
+            background: #eeeeee;
+            margin: 20px;
+        }
+
+        .colorPicker {
+            background: none;
+            border: none;
+            margin: 0;
+        }
+
+        .colorPicker .oned {
+            margin-right: 0;
+        }
+
+    </style>
 </head>
 <body>
     <div class="modal-header">
@@ -18,5 +37,23 @@
     <div class="modal-header">
         <p>Easily access Color Champ content</p>
     </div>
+    <div class="container">
+        <div class="colorjoe"></div>
+        <div class="config">
+            <div class="config-title">Selected Color</div>
+            <div class="selected-color-text">#009578</div>
+            <div class="selected-color"></div>
+            <div class="config-title">Saved Colors</div>
+            <div class="saved-color"></div>
+            <div class="saved-color"></div>
+            <div class="saved-color"></div>
+            <div class="saved-color"></div>
+            <div class="saved-color"></div>
+        </div>
+    </div>
+    <script>
+        const cj = colorjoe.rgb(document.querySelector(".colorjoe"));
+        cj.show();
+    </script>
 </body>
 </html>
