--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="colorjoe/colorjoe.css">
     <script src="colorjoe/colorjoe.min.js"></script>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="colorPallette.css">
 </head>
 <body>
     <!-- Logo Header -->
@@ -43,27 +44,27 @@
     </div>
     <!-- Pallet Maker -->
     <div class="modal-content">
-        <h3>Colour Palette</h3>
+        <h3>Color Palette</h3>
         <p>Press [<button class="generator-button">Space</button>] to generate a new palette</p>
 
         <div class="colors">
             <div class="color">
-                <button class="lock-toggle"><img src="images/closed_lock.svg" /></button>
+                <button class="lock-toggle"><img src="images/open_lock.svg" /></button>
                 <input type="text" class="color-input" value="#000000" />
                 <button class="copy-hex">Copy</button>
             </div>
             <div class="color">
-                <button class="lock-toggle"><img src="images/closed_lock.svg" /></button>
+                <button class="lock-toggle"><img src="images/open_lock.svg" /></button>
                 <input type="text" class="color-input" value="#000000" />
                 <button class="copy-hex">Copy</button>
             </div>
             <div class="color">
-                <button class="lock-toggle"><img src="images/closed_lock.svg" /></button>
+                <button class="lock-toggle"><img src="images/open_lock.svg" /></button>
                 <input type="text" class="color-input" value="#000000" />
                 <button class="copy-hex">Copy</button>
             </div>
             <div class="color">
-                <button class="lock-toggle"><img src="images/closed_lock.svg" /></button>
+                <button class="lock-toggle"><img src="images/open_lock.svg" /></button>
                 <input type="text" class="color-input" value="#000000" />
                 <button class="copy-hex">Copy</button>
             </div>
@@ -72,5 +73,6 @@
     </div>
     <!-- Description Footer -->
     <script src="popup.js"></script>
+    <script src="palletteGen.js"></script>
 </body>
 </html>
