--- a/popup.html
+++ b/popup.html
@@ -73,6 +73,6 @@
     </div>
     <!-- Description Footer -->
     <script src="popup.js"></script>
-    <script src="palletteGen.js"></script>
+    <script src="paletteGen.js"></script>
 </body>
 </html>
