Corrected css formatting and typos

--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,8 @@
     integrity="sha384-X8QTME3FCg1DLb58++lPvsjbQoCT9bp3MsUU3grbIny/3ZwUJkRNO8NPW6zqzuW9" crossorigin="anonymous">
     <link rel="stylesheet" href="colorjoe/colorjoe.css">
     <script src="colorjoe/colorjoe.min.js"></script>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="colorPallette.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/colorPalette.css">
 </head>
 <body>
     <!-- Logo Header -->
